[workspace]
default-members = ["contained"]
members = ["contained", "core"]
resolver = "3"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "contained is a research project implementing the proposed harmonic runtime for orchestrating cloud-native systems"
edition = "2024"
homepage = "https://github.com/FL03/contained/wiki"
keywords = []
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/contained.git"
rust-version = "1.85.0"
version = "0.2.0"

[workspace.dependencies]
contained = { default-features = false, path = "contained", version = "0.2.0" }
contained-core = { default-features = false, path = "core", version = "0.2.0" }

# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# serialization
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { version = "1" }
serde_json = { default-features = false, version = "1" }
# macros & utilities
smart-default = { version = "0.7" }
strum = { default-features = false, features = ["derive"], version = "0.27" }
# WebAssembly
wasm-bindgen = { default-features = false, version = "0.2" }

# ********* Profiles *********
[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = "z"
overflow-checks = false
panic = "unwind"
rpath = false
