[package]
authors = ["FL03 <jo3mccain@icloud.com"]
categories = []
description = "conduit"
edition = "2021"
keywords = []
license = "MIT"
name = "conduit"
repository = "https://github.com/FL03/conduit"
version = "0.1.0"


[build-dependencies]

[dependencies]
futures = "0.3.25"
scsys = { features = ["full"], git = "https://github.com/scattered-systems/scsys", version = "0.1.25" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tarpc = { features = [], version = "0.31.0" }
tokio = { features = ["full"], version = "1.21.2" }

[dev-dependencies]
