[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "conduit"
edition = "2021"
homepage = "https://github.com/FL03/conduit/wiki"
keywords = []
license = "Apache-2.0"
name = "conduit"
readme = "README.md"
repository = "https://github.com/FL03/conduit"
version = "0.1.0"

[build-dependencies]

[dependencies]
async-tungstenite = { features = ["tokio-runtime"], version = "0.18.0" }
clap = { features = ["cargo", "derive", "env"], version = "4.0.29" }
futures = "0.3.25"
opentelemetry = { features = ["rt-tokio"], version = "0.18.0" }
opentelemetry-jaeger = { features = ["full"], version = "0.17.0" }
scsys = { features = ["full"], version = "0.1.35" }
serde = { features = ["derive"], version = "1.0.148" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.22.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { features = ["env-filter"], version = "0.3.15" }
webrtc = "0.6.0"

[dev-dependencies]
