[package]
build = "build.rs"
name = "contained"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bench]]
name = "default"
harness = false

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[build-dependencies]

[dependencies]
contained-core = { workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], version = "0.7" }

[features]
default = [
  "std"
]

full = [
  "default",
]

json = [
  "alloc",
  "contained-core/json",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "contained-core/std",
]

wasi = [
  "alloc",
  "contained-core/wasi",
]

wasm = [
  "alloc",
  "contained-core/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "contained-core/alloc",
]

serde = [
  "contained-core/serde",
]

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
