[package]
build = "build.rs"
name = "contained"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = true
doctest = true
test = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[[bench]]
name = "default"
harness = false

[[test]]
name = "default"

[[test]]
name = "format"
required-features = ["macros"]

[dependencies]
contained-core = { workspace = true }
contained-derive = { optional = true, workspace = true }
contained-macros = { optional = true, workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], version = "0.7" }

[features]
default = [
  "std"
]

full = [
  "default",
  "derive",
  "macros",
]

# ********* [FF] Features *********
derive = ["dep:contained-derive"]

macros = ["dep:contained-macros"]

nightly = [
  "contained-core/nightly",
  "contained-derive?/nightly",
  "contained-macros?/nightly",
]

json = [
  "alloc",
  "contained-core/json",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "contained-core/std",
]

wasi = [
  "alloc",
  "contained-core/wasi",
]

wasm = [
  "alloc",
  "contained-core/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "contained-core/alloc",
]

serde = [
  "contained-core/serde",
]
