[package]
build = "build.rs"
name = "contained"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
doc-scrape-examples = true
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"
bench = true
doctest = true
test = true

[[bench]]
name = "default"
harness = false

[[example]]
doc-scrape-examples = true
name = "derive"
required-features = ["derive"]

[[example]]
doc-scrape-examples = true
name = "macros"
required-features = ["macros"]

[[test]]
name = "format"
required-features = ["macros"]

[dependencies]
contained-core = { workspace = true }
contained-derive = { optional = true, workspace = true }
contained-macros = { optional = true, workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "derive",
  "macros",
  "hashbrown",
]

# ********* [FF] Features *********
derive = ["dep:contained-derive"]

macros = [
  "dep:contained-macros", 
  "contained-core/macros",
]

nightly = [
  "contained-core/nightly",
  "contained-derive?/nightly",
  "contained-macros?/nightly",
]

json = [
  "alloc",
  "contained-core/json",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "contained-core/std",
]

wasi = [
  "alloc",
  "contained-core/wasi",
]

wasm = [
  "alloc",
  "contained-core/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "contained-core/alloc",
]

complex = [
  "contained-core/complex",
]

hashbrown = [
  "contained-core/hashbrown",
]

rand = [
  "contained-core/rand",
  "rng",
]

rayon = [
  "contained-core/rayon",
]

rng = [
  "contained-core/rng",
]


serde = [
  "contained-core/serde",
]

serde_json = [
  "contained-core/serde_json",
]

wasm_bindgen = [
  "contained-core/wasm_bindgen",
]
