[package]
build = "build.rs"
description = "The core crate for the contained project, providing essential abstractions and utilities."
name = "contained-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doctest = true
test = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[[test]]
name = "default"

[dependencies]
# error handling
thiserror = { workspace = true }
# macros & utilities
paste = { workspace = true }
# serialization
serde = { optional = true, features = ["derive"], workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[features]
default = [
  "std"
]

full = [
  "default"
]

# ********* [FF] Features *********
json = [
  "alloc",
  "serde_json",
]

nightly = []

# ********* [FF] Environments *********
std = [
  "alloc",
  "serde?/std",
  "serde_json?/std",
  "thiserror/std",
]

wasi = [
  "alloc",
]

wasm = [
  "alloc",
  "wasm_bindgen",
]

# ********* [FF] Dependencies *********
alloc = [
  "serde?/alloc",
  "serde_json?/alloc",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
]

serde_json = ["dep:serde_json"]

wasm_bindgen = ["dep:wasm-bindgen"]
