[package]
build = "build.rs"
description = "The core crate for the contained project, providing essential abstractions and utilities."
name = "contained-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doctest = true
test = true

[dependencies]
# concurrency & parallelism
rayon-core = { optional = true, workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
# mathematics
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# error handling
thiserror = { workspace = true }
# random
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_core = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { optional = true, features = ["derive"], workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "complex",
  "hashbrown",
  "json",
  "rand",
  "serde",
]

# ********* [FF] Features *********
json = [
  "alloc",
  "serde",
  "serde_json",
]

macros = []

nightly = [
  "hashbrown?/nightly",
  "rand?/nightly",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "hashbrown?/default",
  "num-complex?/std",
  "num-traits/std",
  "rand?/std",
  "rand_core?/std",
  "rand_distr?/std",
  "serde?/std",
  "serde_json?/std",
  "thiserror/std",
]

wasi = []

wasm = [
  "wasm_bindgen",
  "getrandom?/wasm_js",
  "rayon-core?/web_spin_lock",
]

# ********* [FF] Dependencies *********
alloc = [
  "hashbrown?/alloc",
  "rand?/alloc",
  "rand_distr?/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
]

complex = ["dep:num-complex"]

hashbrown = ["dep:hashbrown"]

rand = [
  "rng",
  "dep:rand",
  "dep:rand_core",
  "dep:rand_distr",
  "num-complex?/rand",
]

rayon = [
  "dep:rayon-core",
  "hashbrown?/rayon",
]

rng = [
  "dep:getrandom",
  "rand?/small_rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "hashbrown?/serde",
  "num-complex?/serde",
  "rand?/serde",
  "rand_core?/serde",
  "rand_distr?/serde",
]

serde_json = ["dep:serde_json"]

wasm_bindgen = ["dep:wasm-bindgen"]