[package]
build = "build.rs"
description = "useful derive macros for the scsys ecosystem"
name = "contained-derive"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
doc = true
doctest = true
proc-macro = true
test = true

[[test]]
name = "default"

[[test]]
name = "wrapper"

# ********* Package Metadata *********
[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[dependencies]
# procedural macros
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { features = ["full"], version = "2" }

# ********* Features Flags *********
[features]
default = []

nightly = ["proc-macro2/nightly"]

