[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "contained-music"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = []

[build-dependencies]

[dependencies]
contained-core = { features = [], path = "../core", version = "0.1.4" }

algae.workspace = true
anyhow.workspace = true
decanter.workspace = true
futures.workspace = true
itertools.workspace = true
scsys.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio.workspace = true


[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
