[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "contained-music"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
# Custom
algae.workspace = true
decanter.workspace = true

# Internal
contained-core = { features = [], path = "../core", version = "0.1.4" }

# Dependencies
anyhow.workspace = true
futures.workspace = true
itertools.workspace = true
petgraph = { features = [], version = "0.6" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["sync"], version = "1"}
tracing.workspace = true


[dev-dependencies]
tokio = { features = ["macros", "rt"], version = "1"}

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
