[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "contained-music"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
# Custom
# decanter.workspace = true

# Dependencies
anyhow.workspace = true
futures.workspace = true
itertools.workspace = true

petgraph = { features = ["serde-1"], version = "0.6" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["sync"], version = "1" }
tracing = { features = ["log"], version = "0.1" }

[dependencies.contained-core]
path = "../core"
version = "0.1.6"

[dev-dependencies]
lazy_static = "1"
once_cell = "1"
tokio = { features = ["macros", "rt"], version = "1"}

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
