[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "contained-net"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = []

[build-dependencies]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { features = ["cargo", "derive", "env"], version = "4" }
config = "0.13"
decanter.workspace = true
either = "1"
futures.workspace = true
scsys.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tarpc = { features = ["full"], version = "0.31" }
tokio.workspace = true
tokio-stream.workspace = true
tracing = { features = [], version = "0.1" }
tracing-subscriber = { features = [], version = "0.3" }

[dependencies.libp2p]
features = [
    "dns",
    "ecdsa",
    "identify",
    "kad",
    "macros",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "request-response",
    "serde",
    "tcp",
    "tokio"
]
version = "0.51.1"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
