[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = []
license.workspace = true
name = "contained-net"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = []

wasm = []

[build-dependencies]

[dependencies]
contained-core = { path = "../core" }

anyhow.workspace = true
async-trait.workspace = true
decanter.workspace = true
futures.workspace = true
scsys.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["sync"], version = "1" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.libp2p]
features = [
    "kad",
    "macros",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "request-response",
    "serde",
    "tcp",
    "tokio"
]
version = "0.51.1"

[dev-dependencies]
tokio.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
