[package]
build = "build.rs"
description = "Various traits used to establish the foundation of the contained framework"
name = "contained-traits"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["cdylib", "rlib", "staticlib"]
doc = true
doctest = true
test = true

[dependencies]
# concurrency & parallelism
rayon-core = { optional = true, workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
# mathematics
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
# webassembly
wasm-bindgen = { optional = true, workspace = true }
# macros and utilities
paste = { workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "complex",
  "hashbrown",
  "rand",
  "serde",
]

nightly = []

# ************* [FF:Environments] *************
std = [
  "alloc",
  "hashbrown?/default",
  "num-complex?/std",
  "num-traits/std",
  "serde?/std",
]

wasi = []

wasm = [
  "wasm_bindgen",
  "rayon-core?/web_spin_lock",
]
# ************* [FF:Dependencies] *************
alloc = [
  "hashbrown?/alloc",
  "serde?/alloc",
]

complex = ["dep:num-complex"]

hashbrown = ["dep:hashbrown"]

rayon = [
  "dep:rayon-core",
  "hashbrown?/rayon",
]

rand = [
  "num-complex?/rand",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "hashbrown?/serde",
  "serde?/derive",
  "num-complex/serde",
]

wasm_bindgen = ["dep:wasm-bindgen"]