[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Conduit is a command line interface"
edition = "2021"
homepage = "https://github.com/FL03/conduit/wiki"
keywords = []
license = "Apache-2.0"
name = "conduit-sdk"
repository = "https://github.com/FL03/conduit"
version = "0.1.0"

[features]
default = [ "core" ]
full = [ "core" ]

core = [ "conduit-core" ]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
conduit-core = { features = [], optional = true, path = "../core", version = "0.1.0" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
